[tool.poetry]
name = "rim-kereso"
version = "0.1.0"
description = ""
authors = ["everybitmihaly <misi823@gmail.com>"]
readme = "README.md"
packages = [{include = "rim_kereso"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
